--- a/LiberatorY5/LiberatorY5.csproj
+++ b/LiberatorY5/LiberatorY5.csproj
@@ -84,9 +84,7 @@
     <Compile Include="memoryHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShadowLegacy.cs" />
-    <Compile Include="SteelWave.cs" />
-    <Compile Include="VoidEdge.cs" />
+    <Compile Include="Sesasons.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
