--- a/LiberatorY5/packages.config
+++ b/LiberatorY5/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="Memory.dll.x64" version="1.2.23" targetFramework="net472" />
 </packages>
