--- a/LiberatorY5/packages.config
+++ b/LiberatorY5/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
+  <package id="DiscordRichPresence" version="1.0.175" targetFramework="net472" />
   <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="Memory.dll.x64" version="1.2.23" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
 </packages>
