--- a/LiberatorY5/packages.config
+++ b/LiberatorY5/packages.config
@@ -6,4 +6,5 @@
   <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="Memory.dll.x64" version="1.2.23" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="SuperSimpleTcp" version="2.2.1.1" targetFramework="net472" />
 </packages>
